# guessing-songs

./: .gitignore  CHANGELOG.md  MODULE.bazel  README.md  WORKSPACE  requirements_lock.txt  setup.sh
protos/: BUILD  song.proto
server/: BUILD.bazel  app.py  app_test.py
