module(
    name = "guessing-songs",
    version = "0.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "rules_python", version = "0.20.0")

# (Optional) Register a specific python toolchain instead of using the host version
python = use_extension("@rules_python//python:extensions.bzl", "python")
python.toolchain(
    name = "python3_11",
    configure_coverage_tool = True,
    python_version = "3.10",
)
use_repo(python, "python3_11")
use_repo(python, "python3_11_toolchains")
register_toolchains(
    "@python3_11_toolchains//:all",
)
pip = use_extension("@rules_python//python:extensions.bzl", "pip")
pip.parse(
    name = "pip",
    requirements_lock = "requirements_lock.txt",
)
use_repo(pip, "pip")

# protobuf
bazel_dep(name = "rules_proto", version = "5.3.0-21.7")
bazel_dep(name = "protobuf", version = "21.7")

