load("@pip//:requirements.bzl", "requirement")
# load("@python3_9//:defs.bzl", py_test_with_transition = "py_test")
load("@rules_python//python:defs.bzl", "py_binary", "py_library", "py_test")

py_library(
    name = "app_lib",
    srcs = glob(["*.py"]),
)

py_binary(
    name = "app",
    srcs = ["app.py"],
    deps = [
        ":app_lib",
        "//protos:song_py_proto",
        requirement("Flask"),
        requirement("debugpy"),
    ],
)

py_test(
    name = "app_test",
    srcs = ["app_test.py"],
    deps = [
        ":app"
    ]
)